apps/downloaders/overseerr/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: overseerr
  labels:
    app.kubernetes.io/name: downloaders
    app.kubernetes.io/component: overseerr
    app.kubernetes.io/part-of: media
spec:
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: downloaders
      app.kubernetes.io/component: overseerr
      app.kubernetes.io/part-of: media
  template:
    metadata:
      labels:
        app.kubernetes.io/name: downloaders
        app.kubernetes.io/component: overseerr
        app.kubernetes.io/part-of: media
    spec:
      securityContext:
        runAsGroup: 1000
        runAsUser: 1000
        fsGroup: 1000
        runAsNonRoot: true
      containers:
      - name: overseerr
        image: sctx/overseerr:latest
        ports:
        - containerPort: 5055
          name: http
        startupProbe:
          httpGet:
            port: http
            path: /overseerr/status
          initialDelaySeconds: 10
          periodSeconds: 3
        livenessProbe:
          httpGet:
            port: http
            path: /overseerr/status
          periodSeconds: 60
        readinessProbe:
          httpGet:
            port: http
            path: /overseerr/status
          periodSeconds: 60
        securityContext:
          readOnlyRootFilesystem: true
        volumeMounts:
        - name: tmp
          mountPath: /tmp
          readOnly: false
        - name: config
          mountPath: /app/config
          readOnly: false
        resources:
          requests:
            memory: 128Mi
            cpu: 500m
          limits:
            memory: 512Mi
            cpu: '1'
      volumes:
      - name: tmp
        emptyDir: {}
      - name: config
        persistentVolumeClaim:
          claimName: overseerr-config
