apps/downloaders/overseerr/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: overseerr
spec:
  selector:
    app.kubernetes.io/name: downloaders
    app.kubernetes.io/component: overseerr
    app.kubernetes.io/part-of: media
  ports:
  - port: 5055
    targetPort: 5055
    name: http
